# MattsSoftware-Launcher

./: .gitignore  Makefile  MattsSoftware.entitlements  ONBOARDING.md  Package.swift  README.md  icon.icns  index.html  package-lock.json  package.json  package.sh  tsconfig.json  vite.config.ts
Sources/MattsSoftwareMenuBar/: AccessibilityGate.swift  AppState.swift  Catalog.swift  GlassScroller.swift  HostRootView.swift  HoverVideoPlayer.swift  LiveActivityCoordinator.swift  MattsSoftwareMenuBarApp.swift  MenuContentView.swift  NotchHost.swift  NotchView.swift  Services.swift  SuiteHost.swift  SuiteSettings.swift  SuiteSettingsView.swift
menubar/: Package.swift
menubar/Sources/MattsSoftwareMenuBar/: AppState.swift  Catalog.swift  MattsSoftwareMenuBarApp.swift  MenuContentView.swift  Services.swift
scripts/: suite.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  install.rs  lib.rs  main.rs  settings.rs
src/components/: ActionButton.tsx  AppCard.tsx  AppDetail.tsx  ScreenshotCarousel.tsx  SettingsModal.css  SettingsModal.tsx
src/data/: catalog.ts
src/hooks/: useCatalogStatus.ts
src/lib/: tauri.ts
