[package]
name = "mattssoftware-launcher"
version = "0.1.0"
description = "MattsSoftware — launcher for every app I've built"
edition = "2021"
default-run = "mattssoftware-launcher"

[lib]
name = "mattssoftware_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP for GitHub release lookups + asset downloads. rustls so we
# don't depend on a system OpenSSL; blocking client is fine — all
# network calls happen inside async commands on Tauri's runtime and
# are wrapped in spawn_blocking.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
dirs = "6"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
